<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/bleu_clair">
    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:id="@+id/iv_main_logo"
        android:contentDescription="@string/little_star"
        android:src="@android:drawable/btn_star_big_on"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/inscription"
        android:textSize="20sp"
        android:layout_marginBottom="20dp"/>
    <TextView
        android:id="@+id/tv_login_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_children_login"
        android:autofillHints="login"
        android:inputType="text"
        tools:ignore="LabelFor"
        android:layout_marginBottom="20dp"/>
    <TextView
        android:id="@+id/tv_main_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_children_pwd"
        android:autofillHints="password"
        android:inputType="textPassword"
        android:layout_marginBottom="20dp"
        tools:ignore="LabelFor" />
    <TextView
        android:id="@+id/tv_email_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_children_email"
        android:autofillHints="email"
        android:inputType="textEmailAddress"
        android:layout_marginBottom="20dp"
        tools:ignore="LabelFor" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bt_Ecrire_main"
        android:text="@string/ecrire"
        android:onClick="xmlClickEvent"
        tools:ignore="OnClick"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bt_Lire_main"
        android:text="@string/lire"
        android:onClick="xmlClickEvent"
        tools:ignore="OnClick"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bt_LireLogin_main"
        android:text="@string/lire_ce_login"
        android:onClick="xmlClickEvent"
        tools:ignore="OnClick"/>
    <Button
        android:id="@+id/bt_wbHeh_main"
        android:onClick="xmlClickEvent"
        android:text="@string/site_heh_dst"
        android:background="#FF00FF00"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
    </Button>
</LinearLayout>